--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">V-unity</string>
-    <string name="msg_login">Provide your phone number,so we can able send you conformation code.</string>
+    <string name="msg_login">Provide your phone number, so that we can send you a confirmation code.</string>
     <string name="msg_verification">We have sent you an SMS with a code to the number that you provided.</string>
-    <string name="msg_terms">By continuing,you are indicating that you agree to the <b>Privacy policy</b> and <b>Terms</b>.</string>
+    <string name="msg_terms">By continuing, you are indicating that you agree to the <b>Privacy policy</b> and <b>Terms</b>.</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="msg_something_wrong">Something went wrong!, Try again later.</string>
     <string name="msg_no_internet">No internet connection found!, Please check your connection or try again.</string>
     <string name="search_in_discover">Search in \'Titles\' or \'Keyword\'</string>
+    <string name="filter_with_vunity">Filter with \'Name\' or \'City\'</string>
     <string name="oh_uh">Oh. Uh.</string>
 
     <string name="choose_photo">Choose Photo</string>
@@ -24,8 +25,8 @@
     <string name="categories">Categories</string>
     <string name="add">Add</string>
     <string name="discover">Discover</string>
-    <string name="family">Family</string>
-    <string name="welcome_to_swadharmaa">Welcome to swadharmaa</string>
+    <string name="vunity">Vunity</string>
+    <string name="welcome_to_swadharmaa">Welcome to V-Unity</string>
     <string name="msg_continue">Continue</string>
     <string name="create_one">Create one!</string>
     <string name="here_we_go">Here we go !</string>
@@ -62,88 +63,17 @@
     <string name="more">More</string>
     <string name="donate">Donate</string>
 
-    <string name="personal_information">Personal information</string>
     <string name="name">Name</string>
-    <string name="sharma">Sharma</string>
-    <string name="date_of_birth">Date of birth</string>
-    <string name="mobile">Mobile</string>
-    <string name="gender">Gender</string>
     <string name="email">Email</string>
-    <string name="status">Marital status</string>
-    <string name="city">City (current)</string>
+    <string name="city">City</string>
     <string name="view">view</string>
 
-    <string name="family_information">Family information</string>
-    <string name="nativity">Nativity</string>
-    <string name="kula_theivam">Kula dheivam</string>
     <string name="mother_tongue">Mother tongue</string>
     <string name="sampradhayam">Sampradhayam</string>
-    <string name="gothram">Gothram</string>
     <string name="soothram">Soothram</string>
     <string name="vedham">Vedham</string>
-    <string name="poojas">Poojas</string>
-    <string name="pondugal_name">Pondugal name</string>
 
-    <string name="family_tree">Family tree</string>
-    <string name="shraddha_information">Shraddha information</string>
-    <string name="time_of_birth">Time of birth</string>
-    <string name="place_of_birth">Place of birth</string>
-    <string name="rashi">Rashi</string>
-    <string name="nakshathram">Nakshathram</string>
-    <string name="padham">Padham</string>
-    <string name="smartha_subsect">Smartha Subsect</string>
-    <string name="smartha_subsect_telugu">Smartha Subsect (Telugu)</string>
-    <string name="shree_vaishnavam">Shree vaishnavam</string>
-    <string name="shree_vaishnavam_telugu">Shree vaishnavam (Telugu)</string>
-    <string name="madhava">Madhva</string>
-    <string name="rushi">Rushi</string>
-    <string name="parava">Pravaram</string>
-    <string name="panchangam">Panchangam</string>
-    <string name="thilakam">Thilakam</string>
-    <string name="pithru_gothram">Pithru gothram</string>
-    <string name="mathru_gothram">Mathru gothram</string>
-    <string name="pithru">Pithru</string>
-    <string name="pithamaha">Pithamaha</string>
-    <string name="prapithamaha">Prapithamaha</string>
-    <string name="mathru">Mathru</string>
-    <string name="pithamahi">Pithamahi</string>
-    <string name="mathamaha">Mathamaha</string>
-    <string name="mathru_pithamaha">Mathru pithamaha</string>
-    <string name="mathru_prapithamaha">Mathru prapithamaha</string>
-    <string name="mathamahi">Mathamahi</string>
-    <string name="mathru_pithamahi">Mathru pithamahi</string>
-    <string name="mathru_prapitamahi">Mathru prapithamahi</string>
-    <string name="prapithamahi">Prapithamahi</string>
-    <string name="payasam">Payasam</string>
-    <string name="thyir_pachchadi">Thayir pachchadi</string>
-    <string name="sweet_pachchadi">Sweet pachchadi</string>
-    <string name="kari">Kari</string>
-    <string name="puli_kuttu">Pulikkoottu</string>
-    <string name="morkuzhambu">Morkuzhambu</string>
-    <string name="rasam">Rasam</string>
-    <string name="poruchchakuttu">Porittha koottu</string>
-    <string name="bhakshanam">Bhakshanam</string>
-    <string name="thugayal">Thuvaiyal</string>
-    <string name="uruga">Oorukai</string>
-    <string name="pazhangal">Pazhangal</string>
-    <string name="samayal_type">Samayal type</string>
     <string name="other">Other</string>
-    <string name="koorcham">Koorcham</string>
-    <string name="tharpana_koorcham">Tharpana koorcham</string>
-    <string name="pindam_count">Pindam count</string>
-    <string name="krusaram">Krusaram</string>
-    <string name="pundra_dharanam">Pundra dharanam</string>
-    <string name="relationship">Relationship</string>
-    <string name="masam_sauramanam">Masam (sauramanam)</string>
-    <string name="masam_chandramanam">Masam (chandramanam)</string>
-    <string name="paksham">Paksham</string>
-    <string name="thithi">Thithi</string>
-    <string name="date">Date</string>
-    <string name="time">Time</string>
-    <string name="there_is_no_personal_information">There is no personal information.</string>
-    <string name="samayal">Samayal</string>
-    <string name="vazhakkam">Vazhakkam</string>
-    <string name="there_is_no_gothram_information">There is no gothram information.</string>
     <string name="edit">Edit</string>
     <string name="data">data</string>
     <string name="userId">userId</string>
@@ -154,7 +84,7 @@
     <string name="id">id</string>
     <string name="new_user">newUser</string>
     <string name="skip">skip</string>
-    <string name="there_is_no_samayal_information">There is no samayal information.</string>
+    <string name="there_is_no_information">There is no information.</string>
     <string name="see_all">See all</string>
     <string name="next">Next</string>
     <string name="amount">Amount</string>
@@ -163,5 +93,18 @@
     <string name="about_us">About Us</string>
     <string name="ok">OK</string>
     <string name="payment_successful">Payment successful!</string>
+    <string name="are_you_vaidhika">Are you vaidhika?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
+    <string name="shaka">Shaka</string>
+    <string name="vedha_adhyayanam">Vedha Adhyayanam</string>
+    <string name="shadanga_adhyayanam">Shadanga Adhyayanam</string>
+    <string name="shastra_adhyayanam">Shastra Adhyayanam</string>
+    <string name="prayogam">Prayogam</string>
+    <string name="marital_status">Marital status</string>
+    <string name="clear">Clear</string>
+    <string name="apply">Apply</string>
+
+    <string name="msg_filter">Filter with \'keywords\'</string>
 
 </resources>
